--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,24 @@
 @import "tailwindcss";
+
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+body{
+    max-width: 1440px;
+    margin: 0 auto;
+}
+.home{
+    background: url('./assets/images/bg-stars.svg') center center / cover;
+    background-color: #231d2b;
+}
+.home::after{
+    content: url('./assets/images/pattern-hills.svg');
+    position: absolute;
+    width: 100%;
+    height: fit-content;
+    overflow-x: clip;
+    left: 0;
+    bottom: 0;
+}
