--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,12 @@
 @import "tailwindcss";
 
 *{
-    padding: 0;
-    margin: 0;
     box-sizing: border-box;
 }
 body{
     max-width: 1440px;
     margin: 0 auto;
+    font-family: "Red Hat Text", sans-serif;
 }
 .home{
     background: url('./assets/images/bg-stars.svg') center center / cover;
